--- a/CarexLinkageMap.Rmd
+++ b/CarexLinkageMap.Rmd
@@ -29,6 +29,368 @@ Third, we get the genetic mapping of linkage groups
 ```{r}
 set.map.fun(type="kosambi")
 
+LG.f2.6.0.5.1 <- make.seq(LGs.f2.6.0.5, 1)
+LG.f2.6.0.5.2 <- make.seq(LGs.f2.6.0.5, 2)
+LG.f2.6.0.5.3 <- make.seq(LGs.f2.6.0.5, 3)
+LG.f2.6.0.5.4 <- make.seq(LGs.f2.6.0.5, 4)
+LG.f2.6.0.5.5 <- make.seq(LGs.f2.6.0.5, 5)
+LG.f2.6.0.5.6 <- make.seq(LGs.f2.6.0.5, 6)
+LG.f2.6.0.5.7 <- make.seq(LGs.f2.6.0.5, 7)
+LG.f2.6.0.5.8 <- make.seq(LGs.f2.6.0.5, 8)
+LG.f2.6.0.5.9 <- make.seq(LGs.f2.6.0.5, 9)
+LG.f2.6.0.5.10 <- make.seq(LGs.f2.6.0.5, 10)
+LG.f2.6.0.5.11 <- make.seq(LGs.f2.6.0.5, 11)
+LG.f2.6.0.5.12 <- make.seq(LGs.f2.6.0.5, 12)
+LG.f2.6.0.5.13 <- make.seq(LGs.f2.6.0.5, 13)
+LG.f2.6.0.5.14 <- make.seq(LGs.f2.6.0.5, 14)
+LG.f2.6.0.5.15 <- make.seq(LGs.f2.6.0.5, 15)
+LG.f2.6.0.5.16 <- make.seq(LGs.f2.6.0.5, 16)
+LG.f2.6.0.5.17 <- make.seq(LGs.f2.6.0.5, 17)
+LG.f2.6.0.5.18 <- make.seq(LGs.f2.6.0.5, 18)
+LG.f2.6.0.5.19 <- make.seq(LGs.f2.6.0.5, 19)
+LG.f2.6.0.5.20 <- make.seq(LGs.f2.6.0.5, 20)
+LG.f2.6.0.5.21 <- make.seq(LGs.f2.6.0.5, 21)
+LG.f2.6.0.5.22 <- make.seq(LGs.f2.6.0.5, 22)
+LG.f2.6.0.5.23 <- make.seq(LGs.f2.6.0.5, 23)
+LG.f2.6.0.5.24 <- make.seq(LGs.f2.6.0.5, 24)
+LG.f2.6.0.5.25 <- make.seq(LGs.f2.6.0.5, 25)
+LG.f2.6.0.5.26 <- make.seq(LGs.f2.6.0.5, 26)
+LG.f2.6.0.5.27 <- make.seq(LGs.f2.6.0.5, 27)
+LG.f2.6.0.5.28 <- make.seq(LGs.f2.6.0.5, 28)
+LG.f2.6.0.5.29 <- make.seq(LGs.f2.6.0.5, 29)
+LG.f2.6.0.5.30 <- make.seq(LGs.f2.6.0.5, 30)
+LG.f2.6.0.5.31 <- make.seq(LGs.f2.6.0.5, 31)
+LG.f2.6.0.5.32 <- make.seq(LGs.f2.6.0.5, 32)
+
+
+
+
+LG.f2.6.0.5.1.ord <- order.seq(LG.f2.6.0.5.1, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.2.ord <- order.seq(LG.f2.6.0.5.2, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.3.ord <- order.seq(LG.f2.6.0.5.3, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.4.ord <- order.seq(LG.f2.6.0.5.4, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.5.ord <- order.seq(LG.f2.6.0.5.5, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.6.ord <- order.seq(LG.f2.6.0.5.6, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.7.ord <- order.seq(LG.f2.6.0.5.7, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.8.ord <- order.seq(LG.f2.6.0.5.8, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.9.ord <- order.seq(LG.f2.6.0.5.9, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.10.ord <- order.seq(LG.f2.6.0.5.10, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.11.ord <- order.seq(LG.f2.6.0.5.11, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.12.ord <- order.seq(LG.f2.6.0.5.12, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.13.ord <- order.seq(LG.f2.6.0.5.13, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.14.ord <- order.seq(LG.f2.6.0.5.14, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.15.ord <- order.seq(LG.f2.6.0.5.15, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.16.ord <- order.seq(LG.f2.6.0.5.16, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.17.ord <- order.seq(LG.f2.6.0.5.17, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.18.ord <- order.seq(LG.f2.6.0.5.18, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.19.ord <- order.seq(LG.f2.6.0.5.19, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.20.ord <- order.seq(LG.f2.6.0.5.20, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.21.ord <- order.seq(LG.f2.6.0.5.21, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.22.ord <- order.seq(LG.f2.6.0.5.22, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.23.ord <- order.seq(LG.f2.6.0.5.23, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.24.ord <- order.seq(LG.f2.6.0.5.24, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.25.ord <- order.seq(LG.f2.6.0.5.25, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.26.ord <- order.seq(LG.f2.6.0.5.26, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.27.ord <- order.seq(LG.f2.6.0.5.27, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.28.ord <- order.seq(LG.f2.6.0.5.28, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.29.ord <- order.seq(LG.f2.6.0.5.29, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.30.ord <- order.seq(LG.f2.6.0.5.30, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.31.ord <- order.seq(LG.f2.6.0.5.31, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+LG.f2.6.0.5.32.ord <- order.seq(LG.f2.6.0.5.32, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3, draw.try=FALSE, wait=0)
+
+
+```
+
+Now, we order the markers, all of them and only the safe ones
+
+```{r}
+LG.f2.6.0.5.1.ord.safe <- make.seq(LG.f2.6.0.5.1.ord,"safe")
+LG.f2.6.0.5.2.ord.safe <- make.seq(LG.f2.6.0.5.2.ord,"safe")
+LG.f2.6.0.5.3.ord.safe <- make.seq(LG.f2.6.0.5.3.ord,"safe")
+LG.f2.6.0.5.4.ord.safe <- make.seq(LG.f2.6.0.5.4.ord,"safe")
+LG.f2.6.0.5.5.ord.safe <- make.seq(LG.f2.6.0.5.5.ord,"safe")
+LG.f2.6.0.5.6.ord.safe <- make.seq(LG.f2.6.0.5.6.ord,"safe")
+LG.f2.6.0.5.7.ord.safe <- make.seq(LG.f2.6.0.5.7.ord,"safe")
+LG.f2.6.0.5.8.ord.safe <- make.seq(LG.f2.6.0.5.8.ord,"safe")
+LG.f2.6.0.5.9.ord.safe <- make.seq(LG.f2.6.0.5.9.ord,"safe")
+LG.f2.6.0.5.10.ord.safe <- make.seq(LG.f2.6.0.5.10.ord,"safe")
+LG.f2.6.0.5.11.ord.safe <- make.seq(LG.f2.6.0.5.11.ord,"safe")
+LG.f2.6.0.5.12.ord.safe <- make.seq(LG.f2.6.0.5.12.ord,"safe")
+LG.f2.6.0.5.13.ord.safe <- make.seq(LG.f2.6.0.5.13.ord,"safe")
+LG.f2.6.0.5.14.ord.safe <- make.seq(LG.f2.6.0.5.14.ord,"safe")
+LG.f2.6.0.5.15.ord.safe <- make.seq(LG.f2.6.0.5.15.ord,"safe")
+LG.f2.6.0.5.16.ord.safe <- make.seq(LG.f2.6.0.5.16.ord,"safe")
+LG.f2.6.0.5.17.ord.safe <- make.seq(LG.f2.6.0.5.17.ord,"safe")
+LG.f2.6.0.5.18.ord.safe <- make.seq(LG.f2.6.0.5.18.ord,"safe")
+LG.f2.6.0.5.19.ord.safe <- make.seq(LG.f2.6.0.5.19.ord,"safe")
+LG.f2.6.0.5.20.ord.safe <- make.seq(LG.f2.6.0.5.20.ord,"safe")
+LG.f2.6.0.5.21.ord.safe <- make.seq(LG.f2.6.0.5.21.ord,"safe")
+LG.f2.6.0.5.22.ord.safe <- make.seq(LG.f2.6.0.5.22.ord,"safe")
+LG.f2.6.0.5.23.ord.safe <- make.seq(LG.f2.6.0.5.23.ord,"safe")
+LG.f2.6.0.5.24.ord.safe <- make.seq(LG.f2.6.0.5.24.ord,"safe")
+LG.f2.6.0.5.25.ord.safe <- make.seq(LG.f2.6.0.5.25.ord,"safe")
+LG.f2.6.0.5.26.ord.safe <- make.seq(LG.f2.6.0.5.26.ord,"safe")
+LG.f2.6.0.5.27.ord.safe <- make.seq(LG.f2.6.0.5.27.ord,"safe")
+LG.f2.6.0.5.28.ord.safe <- make.seq(LG.f2.6.0.5.28.ord,"safe")
+LG.f2.6.0.5.29.ord.safe <- make.seq(LG.f2.6.0.5.29.ord,"safe")
+LG.f2.6.0.5.30.ord.safe <- make.seq(LG.f2.6.0.5.30.ord,"safe")
+LG.f2.6.0.5.31.ord.safe <- make.seq(LG.f2.6.0.5.31.ord,"safe")
+LG.f2.6.0.5.32.ord.safe <- make.seq(LG.f2.6.0.5.32.ord,"safe")
+
+LG.f2.6.0.5.1.ord.all <- make.seq(LG.f2.6.0.5.1.ord,"force")
+LG.f2.6.0.5.2.ord.all <- make.seq(LG.f2.6.0.5.2.ord,"force")
+LG.f2.6.0.5.3.ord.all <- make.seq(LG.f2.6.0.5.3.ord,"force")
+LG.f2.6.0.5.4.ord.all <- make.seq(LG.f2.6.0.5.4.ord,"force")
+LG.f2.6.0.5.5.ord.all <- make.seq(LG.f2.6.0.5.5.ord,"force")
+LG.f2.6.0.5.6.ord.all <- make.seq(LG.f2.6.0.5.6.ord,"force")
+LG.f2.6.0.5.7.ord.all <- make.seq(LG.f2.6.0.5.7.ord,"force")
+LG.f2.6.0.5.8.ord.all <- make.seq(LG.f2.6.0.5.8.ord,"force")
+LG.f2.6.0.5.9.ord.all <- make.seq(LG.f2.6.0.5.9.ord,"force")
+LG.f2.6.0.5.10.ord.all <- make.seq(LG.f2.6.0.5.10.ord,"force")
+LG.f2.6.0.5.11.ord.all <- make.seq(LG.f2.6.0.5.11.ord,"force")
+LG.f2.6.0.5.12.ord.all <- make.seq(LG.f2.6.0.5.12.ord,"force")
+LG.f2.6.0.5.13.ord.all <- make.seq(LG.f2.6.0.5.13.ord,"force")
+LG.f2.6.0.5.14.ord.all <- make.seq(LG.f2.6.0.5.14.ord,"force")
+LG.f2.6.0.5.15.ord.all <- make.seq(LG.f2.6.0.5.15.ord,"force")
+LG.f2.6.0.5.16.ord.all <- make.seq(LG.f2.6.0.5.16.ord,"force")
+LG.f2.6.0.5.17.ord.all <- make.seq(LG.f2.6.0.5.17.ord,"force")
+LG.f2.6.0.5.18.ord.all <- make.seq(LG.f2.6.0.5.18.ord,"force")
+LG.f2.6.0.5.19.ord.all <- make.seq(LG.f2.6.0.5.19.ord,"force")
+LG.f2.6.0.5.20.ord.all <- make.seq(LG.f2.6.0.5.20.ord,"force")
+LG.f2.6.0.5.21.ord.all <- make.seq(LG.f2.6.0.5.21.ord,"force")
+LG.f2.6.0.5.22.ord.all <- make.seq(LG.f2.6.0.5.22.ord,"force")
+LG.f2.6.0.5.23.ord.all <- make.seq(LG.f2.6.0.5.23.ord,"force")
+LG.f2.6.0.5.24.ord.all <- make.seq(LG.f2.6.0.5.24.ord,"force")
+LG.f2.6.0.5.25.ord.all <- make.seq(LG.f2.6.0.5.25.ord,"force")
+LG.f2.6.0.5.26.ord.all <- make.seq(LG.f2.6.0.5.26.ord,"force")
+LG.f2.6.0.5.27.ord.all <- make.seq(LG.f2.6.0.5.27.ord,"force")
+LG.f2.6.0.5.28.ord.all <- make.seq(LG.f2.6.0.5.28.ord,"force")
+LG.f2.6.0.5.29.ord.all <- make.seq(LG.f2.6.0.5.29.ord,"force")
+LG.f2.6.0.5.30.ord.all <- make.seq(LG.f2.6.0.5.30.ord,"force")
+LG.f2.6.0.5.31.ord.all <- make.seq(LG.f2.6.0.5.31.ord,"force")
+LG.f2.6.0.5.32.ord.all <- make.seq(LG.f2.6.0.5.32.ord,"force")
+
+```
+
+Drawing the genetic map
+
+```{r}
+Map.6.0.5.ord.safe <- list(
+LG.f2.6.0.5.1.ord.safe, 
+LG.f2.6.0.5.2.ord.safe, 
+LG.f2.6.0.5.3.ord.safe, 
+LG.f2.6.0.5.4.ord.safe, 
+LG.f2.6.0.5.5.ord.safe, 
+LG.f2.6.0.5.6.ord.safe, 
+LG.f2.6.0.5.7.ord.safe, 
+LG.f2.6.0.5.8.ord.safe, 
+LG.f2.6.0.5.9.ord.safe, 
+LG.f2.6.0.5.10.ord.safe,
+LG.f2.6.0.5.11.ord.safe,
+LG.f2.6.0.5.12.ord.safe,
+LG.f2.6.0.5.13.ord.safe,
+LG.f2.6.0.5.14.ord.safe,
+LG.f2.6.0.5.15.ord.safe,
+LG.f2.6.0.5.16.ord.safe,
+LG.f2.6.0.5.17.ord.safe,
+LG.f2.6.0.5.18.ord.safe,
+LG.f2.6.0.5.19.ord.safe,
+LG.f2.6.0.5.20.ord.safe,
+LG.f2.6.0.5.21.ord.safe,
+LG.f2.6.0.5.22.ord.safe,
+LG.f2.6.0.5.23.ord.safe,
+LG.f2.6.0.5.24.ord.safe,
+LG.f2.6.0.5.25.ord.safe,
+LG.f2.6.0.5.26.ord.safe,
+LG.f2.6.0.5.27.ord.safe,
+LG.f2.6.0.5.28.ord.safe,
+LG.f2.6.0.5.29.ord.safe,
+LG.f2.6.0.5.30.ord.safe,
+LG.f2.6.0.5.31.ord.safe,
+LG.f2.6.0.5.32.ord.safe)
+
+Map.6.0.5.ord.all <- list(
+LG.f2.6.0.5.1.ord.all, 
+LG.f2.6.0.5.2.ord.all, 
+LG.f2.6.0.5.3.ord.all, 
+LG.f2.6.0.5.4.ord.all, 
+LG.f2.6.0.5.5.ord.all, 
+LG.f2.6.0.5.6.ord.all, 
+LG.f2.6.0.5.7.ord.all, 
+LG.f2.6.0.5.8.ord.all, 
+LG.f2.6.0.5.9.ord.all, 
+LG.f2.6.0.5.10.ord.all,
+LG.f2.6.0.5.11.ord.all,
+LG.f2.6.0.5.12.ord.all,
+LG.f2.6.0.5.13.ord.all,
+LG.f2.6.0.5.14.ord.all,
+LG.f2.6.0.5.15.ord.all,
+LG.f2.6.0.5.16.ord.all,
+LG.f2.6.0.5.17.ord.all,
+LG.f2.6.0.5.18.ord.all,
+LG.f2.6.0.5.19.ord.all,
+LG.f2.6.0.5.20.ord.all,
+LG.f2.6.0.5.21.ord.all,
+LG.f2.6.0.5.22.ord.all,
+LG.f2.6.0.5.23.ord.all,
+LG.f2.6.0.5.24.ord.all,
+LG.f2.6.0.5.25.ord.all,
+LG.f2.6.0.5.26.ord.all,
+LG.f2.6.0.5.27.ord.all,
+LG.f2.6.0.5.28.ord.all,
+LG.f2.6.0.5.29.ord.all,
+LG.f2.6.0.5.30.ord.all,
+LG.f2.6.0.5.31.ord.all,
+LG.f2.6.0.5.32.ord.all)
+
+draw.map(Map.6.0.5.ord.safe, names= TRUE, grid=TRUE, cex.mrk=0.3)
+
+draw.map(Map.6.0.5.ord.all, names= TRUE, grid=TRUE, cex.mrk=0.3)
+
+```
+
+Linage group 2 has more of 50 cM between the majority of the markers and the remaining 3
+
+```{r}
+
+LG.f2.6.0.5.2.ord.safe2 <- LG.f2.6.0.5.2.ord.safe
+LG.f2.6.0.5.2.ord.safe2$seq.rf <- LG.f2.6.0.5.2.ord.safe$seq.rf[-c(1:3)]
+LG.f2.6.0.5.2.ord.safe2$seq.phases <- LG.f2.6.0.5.2.ord.safe$seq.phases[-c(1:3)]
+LG.f2.6.0.5.2.ord.safe2$seq.num <- LG.f2.6.0.5.2.ord.safe$seq.num[-c(1:3)]
+LG.f2.6.0.5.2.ord.safe2
+
+Map.6.0.5.ord.safe2 <- list(
+LG.f2.6.0.5.1.ord.safe, 
+LG.f2.6.0.5.2.ord.safe2, 
+LG.f2.6.0.5.3.ord.safe, 
+LG.f2.6.0.5.4.ord.safe, 
+LG.f2.6.0.5.5.ord.safe, 
+LG.f2.6.0.5.6.ord.safe, 
+LG.f2.6.0.5.7.ord.safe, 
+LG.f2.6.0.5.8.ord.safe, 
+LG.f2.6.0.5.9.ord.safe, 
+LG.f2.6.0.5.10.ord.safe,
+LG.f2.6.0.5.11.ord.safe,
+LG.f2.6.0.5.12.ord.safe,
+LG.f2.6.0.5.13.ord.safe,
+LG.f2.6.0.5.14.ord.safe,
+LG.f2.6.0.5.15.ord.safe,
+LG.f2.6.0.5.16.ord.safe,
+LG.f2.6.0.5.17.ord.safe,
+LG.f2.6.0.5.18.ord.safe,
+LG.f2.6.0.5.19.ord.safe,
+LG.f2.6.0.5.20.ord.safe,
+LG.f2.6.0.5.21.ord.safe,
+LG.f2.6.0.5.22.ord.safe,
+LG.f2.6.0.5.23.ord.safe,
+LG.f2.6.0.5.24.ord.safe,
+LG.f2.6.0.5.25.ord.safe,
+LG.f2.6.0.5.26.ord.safe,
+LG.f2.6.0.5.27.ord.safe,
+LG.f2.6.0.5.28.ord.safe,
+LG.f2.6.0.5.29.ord.safe,
+LG.f2.6.0.5.30.ord.safe,
+LG.f2.6.0.5.31.ord.safe,
+LG.f2.6.0.5.32.ord.safe)
+
+draw.map(Map.6.0.5.ord.safe2, names= TRUE, grid=TRUE, cex.mrk=0.3)
+
+```
+
+Linage group 24 has more of 50 cM between the majority of the markers and the remaining 8
+
+```{r}
+
+LG.f2.6.0.5.24.ord.safe2 <- LG.f2.6.0.5.24.ord.safe
+LG.f2.6.0.5.24.ord.safe2$seq.rf <- LG.f2.6.0.5.24.ord.safe$seq.rf[-c(1:8)]
+LG.f2.6.0.5.24.ord.safe2$seq.phases <- LG.f2.6.0.5.24.ord.safe$seq.phases[-c(1:8)]
+LG.f2.6.0.5.24.ord.safe2$seq.num <- LG.f2.6.0.5.24.ord.safe$seq.num[-c(1:8)]
+LG.f2.6.0.5.24.ord.safe2
+
+Map.6.0.5.ord.safe3 <- list(
+LG.f2.6.0.5.1.ord.safe, 
+LG.f2.6.0.5.2.ord.safe2, 
+LG.f2.6.0.5.3.ord.safe, 
+LG.f2.6.0.5.4.ord.safe, 
+LG.f2.6.0.5.5.ord.safe, 
+LG.f2.6.0.5.6.ord.safe, 
+LG.f2.6.0.5.7.ord.safe, 
+LG.f2.6.0.5.8.ord.safe, 
+LG.f2.6.0.5.9.ord.safe, 
+LG.f2.6.0.5.10.ord.safe,
+LG.f2.6.0.5.11.ord.safe,
+LG.f2.6.0.5.12.ord.safe,
+LG.f2.6.0.5.13.ord.safe,
+LG.f2.6.0.5.14.ord.safe,
+LG.f2.6.0.5.15.ord.safe,
+LG.f2.6.0.5.16.ord.safe,
+LG.f2.6.0.5.17.ord.safe,
+LG.f2.6.0.5.18.ord.safe,
+LG.f2.6.0.5.19.ord.safe,
+LG.f2.6.0.5.20.ord.safe,
+LG.f2.6.0.5.21.ord.safe,
+LG.f2.6.0.5.22.ord.safe,
+LG.f2.6.0.5.23.ord.safe,
+LG.f2.6.0.5.24.ord.safe2,
+LG.f2.6.0.5.25.ord.safe,
+LG.f2.6.0.5.26.ord.safe,
+LG.f2.6.0.5.27.ord.safe,
+LG.f2.6.0.5.28.ord.safe,
+LG.f2.6.0.5.29.ord.safe,
+LG.f2.6.0.5.30.ord.safe,
+LG.f2.6.0.5.31.ord.safe,
+LG.f2.6.0.5.32.ord.safe)
+
+draw.map(Map.6.0.5.ord.safe3, names= TRUE, grid=TRUE, cex.mrk=0.3)
+
+```
+
+Finally, the linkage group 25 have over 40 cM between the majority of the markers and the last one
+
+
+```{r}
+
+LG.f2.6.0.5.25.ord.safe2 <- LG.f2.6.0.5.25.ord.safe
+LG.f2.6.0.5.25.ord.safe2$seq.num <- LG.f2.6.0.5.25.ord.safe$seq.num[1:19]
+LG.f2.6.0.5.25.ord.safe2$seq.rf <- LG.f2.6.0.5.25.ord.safe$seq.rf[1:18]
+LG.f2.6.0.5.25.ord.safe2$seq.phases <- LG.f2.6.0.5.25.ord.safe$seq.phases[1:18]
+LG.f2.6.0.5.25.ord.safe2
+
+Map.6.0.5.ord.safe4 <- list(
+LG.f2.6.0.5.1.ord.safe, 
+LG.f2.6.0.5.2.ord.safe2, 
+LG.f2.6.0.5.3.ord.safe, 
+LG.f2.6.0.5.4.ord.safe, 
+LG.f2.6.0.5.5.ord.safe, 
+LG.f2.6.0.5.6.ord.safe, 
+LG.f2.6.0.5.7.ord.safe, 
+LG.f2.6.0.5.8.ord.safe, 
+LG.f2.6.0.5.9.ord.safe, 
+LG.f2.6.0.5.10.ord.safe,
+LG.f2.6.0.5.11.ord.safe,
+LG.f2.6.0.5.12.ord.safe,
+LG.f2.6.0.5.13.ord.safe,
+LG.f2.6.0.5.14.ord.safe,
+LG.f2.6.0.5.15.ord.safe,
+LG.f2.6.0.5.16.ord.safe,
+LG.f2.6.0.5.17.ord.safe,
+LG.f2.6.0.5.18.ord.safe,
+LG.f2.6.0.5.19.ord.safe,
+LG.f2.6.0.5.20.ord.safe,
+LG.f2.6.0.5.21.ord.safe,
+LG.f2.6.0.5.22.ord.safe,
+LG.f2.6.0.5.23.ord.safe,
+LG.f2.6.0.5.24.ord.safe2,
+LG.f2.6.0.5.25.ord.safe2,
+LG.f2.6.0.5.26.ord.safe,
+LG.f2.6.0.5.27.ord.safe,
+LG.f2.6.0.5.28.ord.safe,
+LG.f2.6.0.5.29.ord.safe,
+LG.f2.6.0.5.30.ord.safe,
+LG.f2.6.0.5.31.ord.safe,
+LG.f2.6.0.5.32.ord.safe)
+
+draw.map(Map.6.0.5.ord.safe4, names= TRUE, grid=TRUE, cex.mrk=0.3)
 
 ```
 
