permutations until 17.sd

--- a/CarexLinkageMap.Rmd
+++ b/CarexLinkageMap.Rmd
@@ -1034,9 +1034,7 @@ mydata.sd[,1] <- paste("M",mydata.sd[,1], sep="")
 x2.sd <- mydata.sd[,2]
 missingdata.sd <- mydata.sd[,3]
 summary(lm(x2.sd ~ missingdata.sd))
-pdf("missingdatavssd.sd.pdf")
 plot(x2.sd ~ missingdata.sd, main="", xlab = "Number of individuals missing the marker", ylab = "Segregation distortion (X-square)")
-dev.off()
 
 mydata.sd[,4] <- seq(1:1427)
 
@@ -1047,133 +1045,188 @@ LG1.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG1.sd))
 for (j in 1:1000) LG1.per.sd[j,] <- sample(x2.sd, nrow(LG1.sd), replace = FALSE, prob = NULL)
 histLG1.sd <- vector()
 for (i in 1:1000) histLG1.sd[i] <- length(LG1.per.sd[i,][LG1.per.sd[i,]>5.991])
-
-pdf("histLG1.sd.pdf")
 hist(histLG1.sd)
 abline(v=length(LG1.sd[,2][LG1.sd[,2]>5.991]),col="red")
-dev.off()
 length(LG1.sd[,2][LG1.sd[,2]>13.5])
-###################################
-###################################
 
-LG2 <- matrix(0, nrow=1000, ncol = 65)
-for (j in 1:1000) LG2[j,] <- sample(x2, 65, replace = FALSE, prob = NULL)
-histLG2 <- vector()
-for (i in 1:1000) histLG2[i] <- length(LG2[i,][LG2[i,]>5.991])
-hist(histLG2)
-abline(v=19,col="red")
+LG2.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.2.ord.all.sd$seq.num),]
+LG2.sd
+nrow(LG2.sd)
+LG2.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG2.sd))
+for (j in 1:1000) LG2.per.sd[j,] <- sample(x2.sd, nrow(LG2.sd), replace = FALSE, prob = NULL)
+histLG2.sd <- vector()
+for (i in 1:1000) histLG2.sd[i] <- length(LG2.per.sd[i,][LG2.per.sd[i,]>5.991])
+hist(histLG2.sd)
+abline(v=length(LG2.sd[,2][LG2.sd[,2]>5.991]),col="red")
+length(LG2.sd[,2][LG2.sd[,2]>13.5])
 
-LG3 <- matrix(0, nrow=1000, ncol = 84)
-for (j in 1:1000) LG3[j,] <- sample(x2, 84, replace = FALSE, prob = NULL)
-histLG3 <- vector()
-for (i in 1:1000) histLG3[i] <- length(LG3[i,][LG3[i,]>5.991])
-hist(histLG3)
-abline(v=20,col="red")
+LG3.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.3.ord.all.sd$seq.num),]
+LG3.sd
+nrow(LG3.sd)
+LG3.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG3.sd))
+for (j in 1:1000) LG3.per.sd[j,] <- sample(x2.sd, nrow(LG3.sd), replace = FALSE, prob = NULL)
+histLG3.sd <- vector()
+for (i in 1:1000) histLG3.sd[i] <- length(LG3.per.sd[i,][LG3.per.sd[i,]>5.991])
+hist(histLG3.sd)
+abline(v=length(LG3.sd[,2][LG3.sd[,2]>5.991]),col="red")
+length(LG3.sd[,2][LG3.sd[,2]>13.5])
 
-LG4 <- matrix(0, nrow=1000, ncol = 36)
-for (j in 1:1000) LG4[j,] <- sample(x2, 36, replace = FALSE, prob = NULL)
-histLG4 <- vector()
-for (i in 1:1000) histLG4[i] <- length(LG4[i,][LG5[i,]>5.991])
-hist(histLG4)
-abline(v=9,col="red")
 
-LG5 <- matrix(0, nrow=1000, ncol = 40)
-for (j in 1:1000) LG5[j,] <- sample(x2, 40, replace = FALSE, prob = NULL)
-histLG5 <- vector()
-for (i in 1:1000) histLG5[i] <- length(LG5[i,][LG5[i,]>5.991])
-hist(histLG5)
-abline(v=2,col="red")
+LG4.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.4.ord.all.sd$seq.num),]
+LG4.sd
+nrow(LG4.sd)
+LG4.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG4.sd))
+for (j in 1:1000) LG4.per.sd[j,] <- sample(x2.sd, nrow(LG4.sd), replace = FALSE, prob = NULL)
+histLG4.sd <- vector()
+for (i in 1:1000) histLG4.sd[i] <- length(LG4.per.sd[i,][LG4.per.sd[i,]>5.991])
+hist(histLG4.sd, xlim = c(0,60))
+abline(v=length(LG4.sd[,2][LG4.sd[,2]>5.991]),col="red")
+length(LG4.sd[,2][LG4.sd[,2]>13.5])
 
-LG6 <- matrix(0, nrow=1000, ncol = 65)
-for (j in 1:1000) LG6[j,] <- sample(x2, 65, replace = FALSE, prob = NULL)
-histLG6 <- vector()
-for (i in 1:1000) histLG6[i] <- length(LG6[i,][LG6[i,]>5.991])
-hist(histLG6, xlim = c(0,25))
-abline(v=0,col="red")
+LG5.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.5.ord.all.sd$seq.num),]
+LG5.sd
+nrow(LG5.sd)
+LG5.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG5.sd))
+for (j in 1:1000) LG5.per.sd[j,] <- sample(x2.sd, nrow(LG5.sd), replace = FALSE, prob = NULL)
+histLG5.sd <- vector()
+for (i in 1:1000) histLG5.sd[i] <- length(LG5.per.sd[i,][LG5.per.sd[i,]>5.991])
+hist(histLG5.sd)
+abline(v=length(LG5.sd[,2][LG5.sd[,2]>5.991]),col="red")
+length(LG5.sd[,2][LG5.sd[,2]>13.5])
 
-LG7 <- matrix(0, nrow=1000, ncol = 31)
-for (j in 1:1000) LG7[j,] <- sample(x2, 31, replace = FALSE, prob = NULL)
-histLG7 <- vector()
-for (i in 1:1000) histLG7[i] <- length(LG7[i,][LG7[i,]>5.991])
-hist(histLG7)
-abline(v=6,col="red")
 
-LG8 <- matrix(0, nrow=1000, ncol = 23)
-for (j in 1:1000) LG8[j,] <- sample(x2, 23, replace = FALSE, prob = NULL)
-histLG8 <- vector()
-for (i in 1:1000) histLG8[i] <- length(LG8[i,][LG7[i,]>5.991])
-hist(histLG8, xlim = c(0,13))
-abline(v=0,col="red")
+LG6.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.6.ord.all.sd$seq.num),]
+LG6.sd
+nrow(LG6.sd)
+LG6.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG6.sd))
+for (j in 1:1000) LG6.per.sd[j,] <- sample(x2.sd, nrow(LG6.sd), replace = FALSE, prob = NULL)
+histLG6.sd <- vector()
+for (i in 1:1000) histLG6.sd[i] <- length(LG6.per.sd[i,][LG6.per.sd[i,]>5.991])
+hist(histLG6.sd)
+abline(v=length(LG6.sd[,2][LG6.sd[,2]>5.991]),col="red")
+length(LG6.sd[,2][LG6.sd[,2]>13.5])
 
-LG9 <- matrix(0, nrow=1000, ncol = 50)
-for (j in 1:1000) LG9[j,] <- sample(x2, 50, replace = FALSE, prob = NULL)
-histLG9 <- vector()
-for (i in 1:1000) histLG9[i] <- length(LG9[i,][LG9[i,]>5.991])
-hist(histLG9, , xlim = c(0,20))
-abline(v=1,col="red")
 
-LG10 <- matrix(0, nrow=1000, ncol = 36)
-for (j in 1:1000) LG10[j,] <- sample(x2, 36, replace = FALSE, prob = NULL)
-histLG10 <- vector()
-for (i in 1:1000) histLG10[i] <- length(LG10[i,][LG10[i,]>5.991])
-hist(histLG10)
-abline(v=1,col="red")
+LG7.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.7.ord.all.sd$seq.num),]
+LG7.sd
+nrow(LG7.sd)
+LG7.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG7.sd))
+for (j in 1:1000) LG7.per.sd[j,] <- sample(x2.sd, nrow(LG7.sd), replace = FALSE, prob = NULL)
+histLG7.sd <- vector()
+for (i in 1:1000) histLG7.sd[i] <- length(LG7.per.sd[i,][LG7.per.sd[i,]>5.991])
+hist(histLG7.sd)
+abline(v=length(LG7.sd[,2][LG7.sd[,2]>5.991]),col="red")
+length(LG7.sd[,2][LG7.sd[,2]>13.5])
 
-LG11 <- matrix(0, nrow=1000, ncol = 51)
-for (j in 1:1000) LG11[j,] <- sample(x2, 51, replace = FALSE, prob = NULL)
-histLG11 <- vector()
-for (i in 1:1000) histLG11[i] <- length(LG11[i,][LG11[i,]>5.991])
-hist(histLG11)
-abline(v=4,col="red")
+LG8.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.8.ord.all.sd$seq.num),]
+LG8.sd
+nrow(LG8.sd)
+LG8.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG8.sd))
+for (j in 1:1000) LG8.per.sd[j,] <- sample(x2.sd, nrow(LG8.sd), replace = FALSE, prob = NULL)
+histLG8.sd <- vector()
+for (i in 1:1000) histLG8.sd[i] <- length(LG8.per.sd[i,][LG8.per.sd[i,]>5.991])
+hist(histLG8.sd)
+abline(v=length(LG8.sd[,2][LG8.sd[,2]>5.991]),col="red")
+length(LG8.sd[,2][LG8.sd[,2]>13.5])
 
-LG12 <- matrix(0, nrow=1000, ncol = 53)
-for (j in 1:1000) LG12[j,] <- sample(x2, 53, replace = FALSE, prob = NULL)
-histLG12 <- vector()
-for (i in 1:1000) histLG12[i] <- length(LG12[i,][LG12[i,]>5.991])
-hist(histLG12)
-abline(v=3,col="red")
+LG9.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.9.ord.all.sd$seq.num),]
+LG9.sd
+nrow(LG9.sd)
+LG9.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG9.sd))
+for (j in 1:1000) LG9.per.sd[j,] <- sample(x2.sd, nrow(LG9.sd), replace = FALSE, prob = NULL)
+histLG9.sd <- vector()
+for (i in 1:1000) histLG9.sd[i] <- length(LG9.per.sd[i,][LG9.per.sd[i,]>5.991])
+hist(histLG9.sd, xlim = c(0,30))
+abline(v=length(LG9.sd[,2][LG9.sd[,2]>5.991]),col="red")
+length(LG9.sd[,2][LG9.sd[,2]>13.5])
 
-LG13 <- matrix(0, nrow=1000, ncol = 28)
-for (j in 1:1000) LG13[j,] <- sample(x2, 28, replace = FALSE, prob = NULL)
-histLG13 <- vector()
-for (i in 1:1000) histLG13[i] <- length(LG13[i,][LG13[i,]>5.991])
-hist(histLG13, xlim=c(0,16), main = "")
-abline(v=15,col="red")
+LG10.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.10.ord.all.sd$seq.num),]
+LG10.sd
+nrow(LG10.sd)
+LG10.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG10.sd))
+for (j in 1:1000) LG10.per.sd[j,] <- sample(x2.sd, nrow(LG10.sd), replace = FALSE, prob = NULL)
+histLG10.sd <- vector()
+for (i in 1:1000) histLG10.sd[i] <- length(LG10.per.sd[i,][LG10.per.sd[i,]>5.991])
+hist(histLG10.sd)
+abline(v=length(LG10.sd[,2][LG10.sd[,2]>5.991]),col="red")
+length(LG10.sd[,2][LG10.sd[,2]>13.5])
 
-LG14 <- matrix(0, nrow=1000, ncol = 42)
-for (j in 1:1000) LG14[j,] <- sample(x2, 42, replace = FALSE, prob = NULL)
-histLG14 <- vector()
-for (i in 1:1000) histLG14[i] <- length(LG14[i,][LG14[i,]>5.991])
-hist(histLG14)
-abline(v=13,col="red")
+LG11.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.11.ord.all.sd$seq.num),]
+LG11.sd
+nrow(LG11.sd)
+LG11.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG11.sd))
+for (j in 1:1000) LG11.per.sd[j,] <- sample(x2.sd, nrow(LG11.sd), replace = FALSE, prob = NULL)
+histLG11.sd <- vector()
+for (i in 1:1000) histLG11.sd[i] <- length(LG11.per.sd[i,][LG11.per.sd[i,]>5.991])
+hist(histLG11.sd)
+abline(v=length(LG11.sd[,2][LG11.sd[,2]>5.991]),col="red")
+length(LG11.sd[,2][LG11.sd[,2]>13.5])
 
-LG15 <- matrix(0, nrow=1000, ncol = 46)
-for (j in 1:1000) LG15[j,] <- sample(x2, 46, replace = FALSE, prob = NULL)
-histLG15 <- vector()
-for (i in 1:1000) histLG15[i] <- length(LG15[i,][LG5[i,]>5.991])
-hist(histLG15)
-abline(v=3,col="red")
+LG12.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.12.ord.all.sd$seq.num),]
+LG12.sd
+nrow(LG12.sd)
+LG12.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG12.sd))
+for (j in 1:1000) LG12.per.sd[j,] <- sample(x2.sd, nrow(LG12.sd), replace = FALSE, prob = NULL)
+histLG12.sd <- vector()
+for (i in 1:1000) histLG12.sd[i] <- length(LG12.per.sd[i,][LG12.per.sd[i,]>5.991])
+hist(histLG12.sd)
+abline(v=length(LG12.sd[,2][LG12.sd[,2]>5.991]),col="red")
+length(LG12.sd[,2][LG12.sd[,2]>13.5])
 
-LG16 <- matrix(0, nrow=1000, ncol = 48)
-for (j in 1:1000) LG16[j,] <- sample(x2, 48, replace = FALSE, prob = NULL)
-histLG16 <- vector()
-for (i in 1:1000) histLG16[i] <- length(LG16[i,][LG16[i,]>5.991])
-hist(histLG16)
-abline(v=6,col="red")
+LG13.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.13.ord.all.sd$seq.num),]
+LG13.sd
+nrow(LG13.sd)
+LG13.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG13.sd))
+for (j in 1:1000) LG13.per.sd[j,] <- sample(x2.sd, nrow(LG13.sd), replace = FALSE, prob = NULL)
+histLG13.sd <- vector()
+for (i in 1:1000) histLG13.sd[i] <- length(LG13.per.sd[i,][LG13.per.sd[i,]>5.991])
+hist(histLG13.sd, xlim = c(2,21))
+abline(v=length(LG13.sd[,2][LG13.sd[,2]>5.991]),col="red")
+length(LG13.sd[,2][LG13.sd[,2]>13.5])
 
-LG15 <- matrix(0, nrow=1000, ncol = 46)
-for (j in 1:1000) LG15[j,] <- sample(x2, 46, replace = FALSE, prob = NULL)
-histLG15 <- vector()
-for (i in 1:1000) histLG15[i] <- length(LG15[i,][LG15[i,]>5.991])
-hist(histLG15)
-abline(v=3,col="red")
+LG14.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.14.ord.all.sd$seq.num),]
+LG14.sd
+nrow(LG14.sd)
+LG14.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG14.sd))
+for (j in 1:1000) LG14.per.sd[j,] <- sample(x2.sd, nrow(LG14.sd), replace = FALSE, prob = NULL)
+histLG14.sd <- vector()
+for (i in 1:1000) histLG14.sd[i] <- length(LG14.per.sd[i,][LG14.per.sd[i,]>5.991])
+hist(histLG14.sd)
+abline(v=length(LG14.sd[,2][LG14.sd[,2]>5.991]),col="red")
+length(LG14.sd[,2][LG14.sd[,2]>13.5])
 
-LG17 <- matrix(0, nrow=1000, ncol = 90)
-for (j in 1:1000) LG17[j,] <- sample(x2, 90, replace = FALSE, prob = NULL)
-histLG17 <- vector()
-for (i in 1:1000) histLG17[i] <- length(LG17[i,][LG17[i,]>5.991])
-hist(histLG17, xlim=c(5,46), main = "")
-abline(v=45,col="red")
+LG15.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.15.ord.all.sd$seq.num),]
+LG15.sd
+nrow(LG15.sd)
+LG15.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG15.sd))
+for (j in 1:1000) LG15.per.sd[j,] <- sample(x2.sd, nrow(LG15.sd), replace = FALSE, prob = NULL)
+histLG15.sd <- vector()
+for (i in 1:1000) histLG15.sd[i] <- length(LG15.per.sd[i,][LG15.per.sd[i,]>5.991])
+hist(histLG15.sd)
+abline(v=length(LG15.sd[,2][LG15.sd[,2]>5.991]),col="red")
+length(LG15.sd[,2][LG15.sd[,2]>13.5])
+
+LG16.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.16.ord.all.sd$seq.num),]
+LG16.sd
+nrow(LG16.sd)
+LG16.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG16.sd))
+for (j in 1:1000) LG16.per.sd[j,] <- sample(x2.sd, nrow(LG16.sd), replace = FALSE, prob = NULL)
+histLG16.sd <- vector()
+for (i in 1:1000) histLG16.sd[i] <- length(LG16.per.sd[i,][LG16.per.sd[i,]>5.991])
+hist(histLG16.sd)
+abline(v=length(LG16.sd[,2][LG16.sd[,2]>5.991]),col="red")
+length(LG16.sd[,2][LG16.sd[,2]>13.5])
+
+LG17.sd <- mydata.sd[intersect(mydata.sd[,4],LG.f2.6.0.5.17.ord.all.sd$seq.num),]
+LG17.sd
+nrow(LG17.sd)
+LG17.per.sd <- matrix(0, nrow=1000, ncol = nrow(LG17.sd))
+for (j in 1:1000) LG17.per.sd[j,] <- sample(x2.sd, nrow(LG17.sd), replace = FALSE, prob = NULL)
+histLG17.sd <- vector()
+for (i in 1:1000) histLG17.sd[i] <- length(LG17.per.sd[i,][LG17.per.sd[i,]>5.991])
+hist(histLG17.sd, xlim = c(5,50))
+abline(v=length(LG17.sd[,2][LG17.sd[,2]>5.991]),col="red")
+length(LG17.sd[,2][LG17.sd[,2]>13.5])
 
 LG18 <- matrix(0, nrow=1000, ncol = 71)
 for (j in 1:1000) LG18[j,] <- sample(x2, 71, replace = FALSE, prob = NULL)
